<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textoPrincipal"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_margin="10dp"
    ></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/textoLado1"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textStyle="bold"
            >
        </TextView>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="@string/text1"
                android:textSize="15sp"
                android:paddingLeft="10dp"
                android:id="@+id/text1"
                >
            </EditText>
        ></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/textoLado2"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textStyle="bold"
            >
        </TextView>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/text2"
            android:textSize="15sp"
            android:paddingLeft="10dp"
            android:id="@+id/text2"
            >
        </EditText>
        ></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/textoLado3"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textStyle="bold"
            >
        </TextView>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/text3"
            android:paddingLeft="10dp"
            android:textSize="15sp"
            android:id="@+id/text3"
        ></EditText>
        ></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
       >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/triangulo"
            android:id="@+id/triangulo"
            android:onClick="limpiarCuadrado"
        ></RadioButton>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cuadrado"
            android:paddingLeft="10dp"
            android:id="@+id/cuadrado"
            android:onClick="limpiarTriangulo"
        ></RadioButton>
    </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_marginLeft="10dp"
       android:layout_marginRight="10dp"
       >

       <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/resultado"
            android:textAlignment="textStart"

       ></TextView>

       <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text=""
            android:textAlignment="textStart"
            android:id="@+id/resultado"
       ></TextView>

   ></LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:text="@string/calcular"
        android:backgroundTint="@color/black"
        android:id="@+id/calcular"
        android:onClick="calcular"
    ></Button>
</LinearLayout>